# Spetra

./: .gitignore  LICENSE  README.md
Spetra/: CMakeLists.txt  Makefile
Spetra/engine/: CMakeLists.txt
Spetra/engine/inc/spetra/: color.hpp  config.hpp  dialogue_box.hpp  direction.hpp  entity.hpp  filesystem.hpp  game.hpp  input.hpp  scene.hpp  scene_manager.hpp  text.hpp  texture.hpp  timer.hpp  variables.hpp  window.hpp  world.hpp
Spetra/engine/inc/spetra/ui/: bar.hpp  image.hpp  label.hpp  list_menu.hpp  panel.hpp  theme.hpp  ui_root.hpp  widget.hpp
Spetra/engine/src/: color.cpp  dialogue_box.cpp  entity.cpp  filesystem.cpp  game.cpp  input.cpp  scene_manager.cpp  text.cpp  texture.cpp  timer.cpp  variables.cpp  window.cpp  world.cpp
Spetra/engine/src/ui/: bar.cpp  image.cpp  label.cpp  list_menu.cpp  panel.cpp  theme.cpp  ui_root.cpp  widget.cpp
Spetra/projects/demo/: CMakeLists.txt
Spetra/projects/demo/assets/maps/: schema_test_map.json
Spetra/projects/demo/inc/: battle_stub_scene.hpp  blue_scene.hpp  color_scene.hpp  condition_eval.hpp  draw_order.hpp  event_runner.hpp  map_data.hpp  map_loader.hpp  map_scene.hpp  menu_scene.hpp  pause_overlay_scene.hpp  project_settings.hpp  red_scene.hpp
Spetra/projects/demo/src/: battle_stub_scene.cpp  blue_scene.cpp  color_scene.cpp  condition_eval.cpp  draw_order.cpp  event_runner.cpp  main.cpp  map_data.cpp  map_loader.cpp  map_scene.cpp  menu_scene.cpp  pause_overlay_scene.cpp  red_scene.cpp
Spetra/projects/demo/tests/: draw_order_test.cpp  event_test.cpp  map_roundtrip_test.cpp
